--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "now"
   },
   "dependencies": {
     "next": "9.0.5",
+    "now": "^16.1.3",
     "react": "16.9.0",
     "react-dom": "16.9.0"
   }
