--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "deploy": "now"
   },
   "dependencies": {
     "next": "9.0.5",
     "now": "^16.1.3",
+    "ramda": "^0.26.1",
     "react": "16.9.0",
     "react-dom": "16.9.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
